FIND_PACKAGE(OpenMP)
FIND_PACKAGE(OpenCV REQUIRED)

if(OPENMP_FOUND)
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS} -D_PWN_USE_OPENMP_ -DEIGEN_DONT_PARALLELIZE")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif(OPENMP_FOUND)

if(OPENCV_FOUND)
  message("opencv found")
endif(OPENCV_FOUND)

ADD_LIBRARY(logger_lib
	logger.h logger.cpp
)

ADD_LIBRARY(svm_lib
	svm.h svm.cpp
)
SET_TARGET_PROPERTIES(svm_lib PROPERTIES OUTPUT_NAME ${LIB_PREFIX}_svm_lib)
TARGET_LINK_LIBRARIES(svm_lib ${OpenCV_LIBS})


